practice/k8s-infra-setup/ver2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project2-ingress
  namespace: project2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: lucky-gun.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
      - path: /nginx
        pathType: Exact
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /util
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 80
